Added crypto-p12-lib, crypto-pcsc-lib and crypto-sicct-lib