@@ -1,31 +1,35 @@
 package de.servicehealtherx.crypto;
 
 import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.inject.Instance;
 import jakarta.inject.Inject;
 import org.eclipse.microprofile.health.HealthCheck;
 import org.eclipse.microprofile.health.HealthCheckResponse;
 import org.eclipse.microprofile.health.HealthCheckResponseBuilder;
 import org.eclipse.microprofile.health.Readiness;
 
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @Readiness
 @ApplicationScoped
 public class CryptoProviderHealthCheck implements HealthCheck {
 
     @Inject
-    CryptoProvider cryptoProvider;
+    Instance<CryptoProvider> cryptoProviders;
 
     @Override
     public HealthCheckResponse call() {
-        List<KeyStoreDescriptor> stores = cryptoProvider.listKeyStores();
+        List<KeyStoreDescriptor> stores = new ArrayList<>();
+        for (CryptoProvider provider : cryptoProviders) {
+            stores.addAll(provider.listKeyStores());
+        }
+
         long total = stores.size();
         List<String> unavailable = stores.stream()
             .filter(d -> d.getAvailability() != KeyStoreAvailability.AVAILABLE)
             .map(d -> d.alias.value())
-            .collect(Collectors.toList());
+            .toList();
         long available = total - unavailable.size();
 
         HealthCheckResponseBuilder builder = HealthCheckResponse.named("crypto-provider")
